# KiriCrop

./: .gitignore  .gitlab-ci.yml  .gitmodules  COPYING  Makefile.am  README  TODO.org  autogen.sh  configure.ac
src/: Makefile.am  main.cpp  pixelimage_jpeg.cpp  pixelimage_jpeg.h  pixelimage_png.cpp  pixelimage_png.h
